Madonna - MDNA Girls Gone Wild FLAC
MDNA in FLAC format.
On track 1 at 1 min 33secs it skips, I have tested with Nero Kwik Media, WMP and MPC and its does not skip with any of them.
flac warning: the decoder was aborted by the read callback.flac warning: an error in the stream caused the decoder to lose synchronization.main warning: buffer way too early (-160078), clearing queuemain warning: timing screwed, stopping resamplingmain debug: audio output is starving (-318161), playing silence
At one point libavformat parser returns one big frame, while our packetizer returns 2.
The first frame is ok, the second one has 4 channels.
It is not clear (because the code is unreadable of course) why libavformat returns one big frame, or why returning one big frame makes the decoder happy.
If the flac decoder accepts concatenated frames we should look for a start marker until we reach the maximum frame size (p_sys->stream_info.max_framesize).
flac packetizer: use the largest possible frame sizeFixes [#6476](https://code.videolan.org/videolan/vlc/-/issues/6476)Fixes [#9442](https://code.videolan.org/videolan/vlc/-/issues/9442)