flac packetizer: use the largest possible frame size

Fixes #6476
Fixes #9442